--- a/index.html.html
+++ b/index.html.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Streak Up</title>
-  <link rel="stylesheet" href="streakup.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
 
@@ -253,3 +253,4 @@
 
 </body>
 </html>
+
